feat: 添加代理支持

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,6 +15,8 @@
   "inputPromptTips":"Input your prompt here",
   "enterKey":"Enter the chatgpt key",
   "enterKeyTips":"Enter the chatgpt key here",
+  "setProxyUrl":"Enter the proxy url",
+  "setProxyUrlTips":"Enter the proxy url here. If not, the default is official",
   "ok":"OK",
   "cancel":"Cancel"
 }
