--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -18,5 +18,7 @@
   "setProxyUrl":"请输入代理Url",
   "setProxyUrlTips":"请在这里输入代理url，不填默认官方",
   "ok":"确定",
-  "cancel":"取消"
+  "cancel":"取消",
+  "useStreamApi":"使用流式(Stream) API",
+  "gptModel":"选择 GPT Model"
 }
