--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,24 +1,24 @@
 {
   "appTitle": "ChatGpt",
-  "toSecondPage":"to second page",
-  "secondPage":"this is the second Page",
-  "countTimes":"current total count is:",
-  "noConversationTips":"There seems to be no session, click on the left to create one quickly, or simply type prompt to create one",
-  "newConversation":"New Conversation",
-  "renameConversation":"Rename Conversation",
-  "settings":"Settings",
-  "theme":"switch theme",
-  "language":"switch language",
-  "delete":"Delete",
-  "reName":"ReName",
-  "inputPrompt":"Input your prompt",
-  "inputPromptTips":"Input your prompt here",
-  "enterKey":"Enter the chatgpt key",
-  "enterKeyTips":"Enter the chatgpt key here",
-  "setProxyUrl":"Enter the proxy url",
-  "setProxyUrlTips":"Enter the proxy url here. If not, the default is official",
-  "ok":"OK",
-  "cancel":"Cancel",
-  "useStreamApi":"Use Stream API",
-  "gptModel":"Select GPT Model"
+  "toSecondPage": "to second page",
+  "secondPage": "this is the second Page",
+  "countTimes": "current total count is:",
+  "noConversationTips": "There seems to be no session, click on the left to create one quickly, or simply type prompt to create one",
+  "newConversation": "New Conversation",
+  "renameConversation": "Rename Conversation",
+  "settings": "Settings",
+  "theme": "switch theme",
+  "language": "switch language",
+  "delete": "Delete",
+  "reName": "ReName",
+  "inputPrompt": "Input your prompt",
+  "inputPromptTips": "Input your prompt here",
+  "enterKey": "Enter the chatgpt key",
+  "enterKeyTips": "Enter the chatgpt key here",
+  "setProxyUrl": "Enter the proxy url",
+  "setProxyUrlTips": "Select the proxy url here.",
+  "ok": "OK",
+  "cancel": "Cancel",
+  "useStreamApi": "Use Stream API",
+  "gptModel": "Select GPT Model"
 }
