feat: 支持多语言模型

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,5 +20,6 @@
   "ok": "OK",
   "cancel": "Cancel",
   "useStreamApi": "Use Stream API",
-  "gptModel": "Select GPT Model"
+  "gptModel": "Select GPT Model",
+  "llmHint": "Select LLM Model"
 }
