feat: 支持手动输入glm 的 baseurl

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,5 +21,6 @@
   "cancel": "Cancel",
   "useStreamApi": "Use Stream API",
   "gptModel": "Select GPT Model",
-  "llmHint": "Select LLM Model"
+  "llmHint": "Select LLM Model",
+  "gmlBaseUrl": "Please input chatglm base url"
 }
