--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -21,5 +21,6 @@
   "cancel": "取消",
   "useStreamApi": "使用流式(Stream) API",
   "gptModel": "选择 GPT Model",
-  "llmHint": "选择大语言模型"
+  "llmHint": "选择大语言模型",
+  "gmlBaseUrl": "请输入chatglm代理Url"
 }
